# citationnet

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg  tox.ini
docs/: conf.py  index.rst  requirements.txt
src/citationnet/: __init__.py
src/citationnet/media/data/: 10_dot_1038_slash_s41598-020-76916-3.json  10_dot_1103_slash_physrevlett_dot_112_dot_140408.json  Bastidas_10_dot_1103_slash_physrevlett_dot_112_dot_140408.json  Zamani_10_dot_1038_slash_s41598-020-76916-3.json  prl.json
src/citationnet/static/: 3d-force-graph.min.js  force-citationNet.js  pieChart_vega-lite.js  sidebar.css  vegaLiteSpec.json
src/citationnet/static/lib/: 3d-force-graph.js  3d-force-graph.js.map  3d-force-graph.min.js  force-citationNet.js  sidebar.css  sidebar.js
src/citationnet/templates/: 404.html  base.html  choose.html  navigation.html  startpage.html  testing.html  vegaDemo.html  visDynamic.html
tests/: test_citationnet.py
